<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="none"
        android:id="@+id/drawer_top">
        <item
            android:id="@+id/nav_my_shares"
            android:icon="@drawable/drawer_my_shares"
            android:title="@string/drawer_my_shares"/>
        <item
            android:id="@+id/nav_all_events"
            android:icon="@drawable/drawer_all_events"
            android:title="@string/drawer_all_events"/>
        <item
            android:id="@+id/nav_map_view"
            android:icon="@drawable/drawer_map_view"
            android:title="@string/drawer_map_view" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/drawer_notifications"
            android:title="@string/drawer_notifications"/>
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/drawer_groups"
            android:title="@string/drawer_groups" />
    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/drawer_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/drawer_settings"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/drawer_contact_us"
            android:title="@string/drawer_contact_us" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/drawer_about"
            android:title="@string/drawer_about" />
    </group>
</menu>
