<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_8"
        style="@style/FooMedium"
        android:id="@+id/textPublicationTitle" />

    <TextView
        android:text="@string/dialog_please_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_8"
        style="@style/FooMedium"
        android:id="@+id/textView1" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/dialog_has_more_to_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FooMedium"
            android:id="@+id/radioHasMore"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/dialog_i_took_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FooMedium"
            android:id="@+id/radioTookAll"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/dialog_found_nothing_there"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FooMedium"
            android:id="@+id/radioNothingThere"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:text="@string/dialog_please_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_16"
        style="@style/FooMedium"
        android:id="@+id/textView3" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:stepSize="1"
        android:id="@+id/ratingReport"
        android:rating="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonCancel" />

        <Button
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonSend" />
    </LinearLayout>


</LinearLayout>