<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content">

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:hint="@string/dialog_new_group"
    android:ems="10"
    android:id="@+id/editGroupName"
    android:layout_below="@+id/buttonCreate"
    style="@style/FooMedium"
    android:maxLines="1"
    android:layout_centerHorizontal="true"
    android:gravity="top|start" />

<Button
    android:text="@string/create"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttonCreate"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="@dimen/margin_8" />

<Button
    android:text="@string/cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttonCancel"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="@dimen/margin_8" />
</RelativeLayout>