<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.roa.foodonetv3.activities.WelcomeUserActivity">

    <TextView
        android:text="@string/welcome_to_foodonet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_22"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/FooBlueLarge"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_below="@+id/textView3"
        android:id="@+id/textUserName"
        style="@style/FooBoldMedium"
        android:layout_centerHorizontal="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageUser"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_height="@dimen/image_size_height_120"
        android:layout_width="@dimen/image_size_height_120"
        android:layout_below="@+id/textUserName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/last_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circleImageUser"
        android:layout_marginTop="@dimen/margin_24"
        android:id="@+id/textView4"
        style="@style/FooMedium"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_above="@+id/buttonFinishRegistration"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginRight="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32"
        android:id="@+id/editUserPhoneNumber"
        />

    <Button
        android:text="@string/start_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textWithoutRegistration"
        android:layout_marginBottom="@dimen/margin_32"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginRight="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32"
        android:id="@+id/buttonFinishRegistration"
        />

    <TextView
        android:text="@string/continue_without_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:id="@+id/textWithoutRegistration"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
