<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_height_150"
        android:id="@+id/layoutImage">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_size_height_150"
            app:srcCompat="@drawable/camera_xxh"
            android:id="@+id/imagePictureAddPublication" />

        <include layout="@layout/layout_info"
            android:id="@+id/layoutInfo"/>

    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_below="@id/layoutImage"/>

    <ImageView
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        app:srcCompat="@drawable/camera_xxh"
        android:id="@+id/imageTakePictureAddPublication"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/imageTakePictureAddPublication"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextTitleAddPublication"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:hint="@string/post_hint_what_would_you_like_to_share"
        style="@style/FooMedium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/editTextTitleAddPublication"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textLocationAddPublication"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:paddingLeft="@dimen/margin_4"
        android:paddingStart="@dimen/margin_4"
        android:paddingRight="@dimen/margin_4"
        android:paddingEnd="@dimen/margin_4"
        android:hint="@string/post_hint_pickup_address"
        style="@style/FooMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divider1"
        android:layout_below="@id/textLocationAddPublication"
        android:background="@color/fooGrey"
        android:layout_alignLeft="@id/textLocationAddPublication"
        android:layout_alignStart="@id/textLocationAddPublication"
        android:layout_alignRight="@id/textLocationAddPublication"
        android:layout_alignEnd="@id/textLocationAddPublication"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginLeft="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginRight="@dimen/margin_4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPriceHeader"
        android:layout_below="@+id/divider1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/price"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:paddingStart="@dimen/margin_4"
        android:paddingLeft="@dimen/margin_4"
        android:paddingRight="@dimen/margin_4"
        android:paddingEnd="@dimen/margin_4"
        style="@style/FooMedium"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/editTextPriceAddPublication"
        android:ems="5"
        android:layout_alignBaseline="@+id/textPriceHeader"
        android:layout_alignBottom="@+id/textPriceHeader"
        android:layout_toRightOf="@+id/textPriceHeader"
        android:layout_toEndOf="@+id/textPriceHeader"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"
        android:paddingLeft="@dimen/margin_8"
        android:paddingStart="@dimen/margin_8"
        android:paddingRight="@dimen/margin_8"
        android:paddingEnd="@dimen/margin_8"
        android:hint="@string/free"
        style="@style/FooMedium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₪"
        android:layout_alignBaseline="@id/textPriceHeader"
        android:layout_alignBottom="@+id/textPriceHeader"
        android:layout_toRightOf="@id/editTextPriceAddPublication"
        android:layout_toEndOf="@id/editTextPriceAddPublication"
        style="@style/FooSmall"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPriceHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textShareWithAddPublication"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:paddingStart="@dimen/margin_4"
        android:paddingLeft="@dimen/margin_4"
        android:paddingRight="@dimen/margin_4"
        android:paddingEnd="@dimen/margin_4"
        style="@style/FooMedium"
        android:text="@string/post_hint_share_with"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerShareWith"
        android:layout_above="@+id/editTextDetailsAddPublication"
        android:layout_toRightOf="@+id/textShareWithAddPublication"
        android:layout_toEndOf="@+id/textShareWithAddPublication"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textShareWithAddPublication"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextDetailsAddPublication"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:hint="@string/post_hint_additional_details"
        style="@style/FooMedium"/>



</RelativeLayout>